--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.0.0",
     "@ngrx/effects": "^16.1.0",
     "@ngrx/store": "^16.1.0",
+    "aws-sdk": "^2.1445.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
